fixed an alignment bug and updated some styling

--- a/css/chart.css
+++ b/css/chart.css
@@ -29,8 +29,7 @@
   --green-dark: #0f5132;
 
   /* fonts */
-  --headingFont: "Spectral", serif;
-  --bodyFont: "Karla", sans-serif;
+
   --smallText: 0.7em;
 
   /* misc vars */
@@ -39,7 +38,7 @@
   --borderRadius: 0.25rem;
   --letterSpacing: 1px;
   --transition: 0.2s ease-in-out all;
-  --max-width: 1120px;
+  --max-width: 1200px;
   --fixedWidth: 600px;
 
   /* box shadow */
